spacing fixed

--- a/blocks/columns/columns.css
+++ b/blocks/columns/columns.css
@@ -80,7 +80,7 @@
   font-size: var(--font-size-300);
   border-bottom: 2px solid #FFFFFF4D;
   border-radius: var(--border-radius-none);
-  padding: 10px 0 4px;
+  padding: 12px 0 4px;
   margin: 0;
 }
 
